--- a/README.jp
+++ b/README.jp
@@ -27,7 +27,7 @@
 
 
 ▼環境
-X Window Systemが稼働しているUNIX環境、もしくは MS Windows/Mac OS環境
+X Window Systemが稼働しているUNIX環境、もしくは MS Windows/macOS環境
 でも利用が可能です。
 Win/Mac用にはバイナリー配布をしています。
 
