--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017.06.25 ver2.9.6 - Removed IRAS fluxes from Starndard List, because its
+	              measurements are removed from SIMBAD (in 4/2017).
+	            - Added WISE/AKARI IRC & FIS for database query in FC.
+
 2017.06.20 ver2.9.5 - Added "Merge Non-Sidereal Tracking File".
 	              Now, Non-Sidereal objects (in TSC & JPL HORIZONS file
 	              formats) can be displayerd. Geocentric coordinates are
