--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017.06.26 ver2.9.7 - Bug fix for reading files on Windows.
+                    - Date tags on Non-Sidereal orbits in FC.
+
 2017.06.25 ver2.9.6 - Removed IRAS fluxes from Starndard List, because its
 	              measurements are removed from SIMBAD (in 4/2017).
 	            - Added WISE/AKARI IRC & FIS for database query in FC.
