--- a/hskymon.1
+++ b/hskymon.1
@@ -128,6 +128,6 @@ From the main menu, HORIZONS files can be converted into the TSC format.
 .nf
 Akito Tajitsu	<tajitsu@naoj.org>
 .br
-  URL:   https://github.com/chimari/hskymon
+  URL:   https://www.naoj.org/Observing/Instruments/HDS/hskymon-e.html
 .fi
 
