--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017.07.05 ver2.9.8 - Removed gdk_flush() and g_main_context_iteration().
+	              (void functions my_gdk_flush() are inserted.)
+
 2017.06.26 ver2.9.7 - Bug fix for reading files on Windows.
                     - Date tags on Non-Sidereal orbits in FC.
 	            - Attached .spec file for rpmbuild.
