--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hskymon (2.9.9) unstable; urgency=medium
+
+  * removed gdk_flush and g_main_context_iteration
+  * added hsc dithering parameters
+
+ -- Akito Tajitsu <taji@zekamashi>  Thu, 06 Jul 2017 18:10:20 -1000
+
 hskymon (2.9.7) unstable; urgency=low
 
   * Initial Release.
