--- a/hskymon.1
+++ b/hskymon.1
@@ -99,7 +99,7 @@ Please put TSC files in an appropriate directory (maybe in the same
 directory where your OPE files locate) and load them from the menu.
 Files must follow the format described in
 .br
-  https://www.naoj.org/Observing/Telescope/Tracking/NonSidereal/ .
+  http://www.naoj.org/Observing/Telescope/Tracking/NonSidereal/ .
 .br
 You should use "Geocentric" coordinate in TSC files.
 They would be automatically converted into topocentric in the program.
@@ -128,6 +128,6 @@ From the main menu, HORIZONS files can be converted into the TSC format.
 .nf
 Akito Tajitsu	<tajitsu@naoj.org>
 .br
-  URL:   https://www.naoj.org/Science/Resources/tools/hskymon/
+  URL:   http://www.naoj.org/Observing/tools/hskymon
 .fi
 
