--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.0.4) unstable; urgency=medium
+
+  * Support LAMOST DR2 for database query in FC.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Thu, 09 Nov 2017 16:07:13 -1000
+
 hskymon (3.0.2) unstable; urgency=medium
 
   *  Bug fix on fgets_new() [On EOF management troubled in
