--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.0.5) unstable; urgency=medium
+
+   * Support LAMOST DR3 for database query in FC (Method=POST).
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Thu, 16 Nov 2017 17:43:52 -1000
+
 hskymon (3.0.4) unstable; urgency=medium
 
   * Support LAMOST DR2 for database query in FC.
