Added SMOKA for FCDB

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017.11.?? ver3.0.6 - Added SMOKA/HST/ESO data archive for database query
+	              in FC.
+	            - Added GEMINI data archive for web database access.
+
 2017.11.16 ver3.0.5 - Changed LAMOST FCDB server to dr3.lamost.org .
 	              Now POST method is avairable for DB access.
 	            - SIMBAD DB host is selectable in "Browsing" panel of
