--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.0.7) unstable; urgency=medium
+
+  * Added Shot only search for SMOKA.
+
+ -- Akito Tajitsu <taji@zekamashi>  Mon, 27 Nov 2017 09:16:56 -1000
+
 hskymon (3.0.6) unstable; urgency=medium
 
   * Support SMOKA, HST, ESO data archive for database query both in FC and web browser.
