Updated SDSS to DR14

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017.12.01 ver3.0.9 - SDSS cite is updated to DR14.
+	            - Revised CASSIS's URL.
+
 2017.11.28 ver3.0.8 - CSV output for FCDB query results.
 
 2017.11.27 ver3.0.7 - Shot only button (SUP, HSC, and KWFC only) for SMOKA
