--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.0.9) unstable; urgency=medium
+
+  * Updated SDSS cite to DR14.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Fri, 01 Dec 2017 16:07:22 -1000
+
 hskymon (3.0.8) unstable; urgency=medium
 
   * CSV output for FCDB query results.
