--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017.12.04 ver3.1.0 - Changed SDSS FCDB server to POST type one.
+	              Imaging/Spectro queries are available.
+
 2017.12.01 ver3.0.9 - SDSS cite is updated to DR14.
 	            - Revised CASSIS's URL.
 
@@ -16,7 +19,7 @@
 	              request, the file is overwritten.
 
 2017.11.16 ver3.0.5 - Changed LAMOST FCDB server to dr3.lamost.org .
-	              Now POST method is avairable for DB access.
+	              Now POST method is available for DB access.
 	            - SIMBAD DB host is selectable in "Browsing" panel of
 	              the properties window, Strasbourg/Haravard
 	              (Default is Haravard).
