--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-hskymon (3.1.0) stable; urgency=medium
+hskymon (3.2.0) unstable; urgency=medium
+
+  * Added List query mode.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Thu, 21 Dec 2017 17:43:06 -1000
+
+hskymon (3.1.0) unstable; urgency=medium
 
   * Updated SDSS server to POST type one.
 
