--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017.12.25 ver3.3.0 - Added Gemini archive into "List Query" and FCDB.
+                    - "json-c" is now required to parse Gemini archive info.
+
 2017.12.21 ver3.2.0 - Added "List Query" mode in Main Menu (Database).
 	              Objects listed in Object List Window can be
 	              queried in SMOKA, HST, and ESO archive.
