--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 #                         Document file
 #
 #
-#                                  ver 3.2.0    2017/12/21
+#                                  ver 3.3.0    2017/12/25
 #                               Copyright (C) 2003-17 Akito Tajitsu
 #                                               tajitsu_at_naoj.org
 #      Subaru Telescope, National Astronomical Observatory of Japan
@@ -38,7 +38,7 @@ MS Windows (Win2000 or later), or macOS (Mavericks or later).
 To compile this program from its source code, you need to install
 Gtk+ development tools (for Windows, I use msys + Gtk-dev).
 Gtk+2.8 (or later) is required (my recommendation is ver2.10 or later).
-libxml2 and openssl is also required to build the program.
+libxml2, openssl, and json-c are also required to build the program.
 
 In order to get telescope status, hskymon requires xmlrpc-c library.
 But, Windows/Mac version does not support this function.
