--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-2017.12.27 ver3.3.1 - fgets_new() --> fgets() in smoka parse in votable.c .
+2017.12.28 ver3.3.2 - Back fgets() --> fgets_new() in smoka parse.
+	            - GUI updates in List query services.
+
+2017.12.27 ver3.3.1 - fgets_new() --> fgets() in smoka parse (votable.c).
 
 2017.12.25 ver3.3.0 - Added Gemini archive into "List Query" and FCDB.
                     - "json-c" is now required to parse Gemini archive info.
