--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018.01.02 ver3.3.4 - A bug fix for crushes with opening two or more target
+	              lists.
+
 2017.12.29 ver3.3.3 - Thread cancel function in WIN32 version.
 	            - Revised schemes in GUI termination (by WM).
 	            - Fized time stamp problem in AllSky images.
