--- a/README.jp
+++ b/README.jp
@@ -3,7 +3,7 @@
 #                         Document file
 #
 #
-#                                  ver 3.3.5    2018/01/19
+#                                  ver 3.3.6    2018/02/14
 #                               Copyright (C) 2003-18 Akito Tajitsu
 #                                               tajitsu_at_naoj.org
 #      Subaru Telescope, National Astronomical Observatory of Japan
@@ -111,7 +111,7 @@ Windows/Mac版の制限として、後述のXMLRPCに関する機能は現在ありません。
 
 ▼入力ファイル
 [1]OPEファイル
-SOSs準拠のOPEファイルからターゲットを読み込みできます。
+Gen2準拠のOPEファイルからターゲットを読み込みできます。
 
    <PARAMETER_LIST>
 
@@ -206,7 +206,7 @@ Dateのフォーマットはカレンダー形式、JDのどちらでもかまいません。
    The code in this distribution is Copyright 2003-2018 by Akito Tajitsu
 
    このプログラムはフリーソフトウェアです。あなたはこれを、 Free Software　
-   Foundation によって発行されたGNU一般公衆利用許諾書 (バージョン2、
+   Foundation によって発行されたGNU一般公衆利用許諾書 (バージョン3、
    または(任意に)それ以降のバージョンのどちらか)の定める条件に従って、
    これを再配布、そして(あるいは)修正することができます。
 
