Bug fix on popup message termination

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2018.02.21 ver3.3.8 - Bug fix on popup message termination.
+
 2018.02.16 ver3.3.7 - Added AKARI images via SkyView for FC.
 	            - Added "Check the latest ver.".
 
