--- a/debian/changelog
+++ b/debian/changelog
@@ -1,22 +1,28 @@
-hskymon (3.3.7) instable; urgency=medium
+hskymon (3.3.8) unstable; urgency=medium
+
+  * Bug fix on popup message termination.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Wed, 21 Feb 2018 14:49:29 -1000
+
+hskymon (3.3.7) unstable; urgency=medium
 
   * Added checking the latest version via http.
 
  -- Akito Tajitsu <tajitsu@naoj.org>  Tue, 20 Feb 2018 01:44:17 -1000
 
-hskymon (3.3.6) instable; urgency=medium
+hskymon (3.3.6) unstable; urgency=medium
 
   * Accelerated lunar calc by buffering.
 
  -- Akito Tajitsu <tajitsu@naoj.org>  Wed, 14 Feb 2018 16:34:41 -1000
 
-hskymon (3.3.5) instable; urgency=medium
+hskymon (3.3.5) unstable; urgency=medium
 
   * Changed maximum and default search diamters for FCDB.
 
  -- Akito Tajitsu <tajitsu@naoj.org>  Wed, 14 Feb 2018 16:34:41 -1000
 
-hskymon (3.3.4) instable; urgency=medium
+hskymon (3.3.4) unstable; urgency=medium
 
   * A Bug fix for crushes with opening two or more target lists.
 
