--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.5.0) unstable; urgency=medium
+
+  * The 1st release supporting Gtk+3.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Fri, 09 Mar 2018 14:32:02 -1000
+
 hskymon (3.3.8) unstable; urgency=medium
 
   * Bug fix on popup message termination.
