--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.5.1) unstable; urgency=medium
+
+  * Removed all deprecated functions in Gtk+3.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Thu, 22 Mar 2018 16:29:25 -1000
+
 hskymon (3.5.0) unstable; urgency=medium
 
   * The 1st release supporting Gtk+3.
