--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.5.2) unstable; urgency=medium
+
+  *  Fixed a bug not to re-popup the prop edit dialog.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Thu, 05 Apr 2018 16:47:00 -1000
+
 hskymon (3.5.1) unstable; urgency=medium
 
   * Removed all deprecated functions in Gtk+3.
