--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018.05.03 ver3.5.4 - Revised GAIA DR2 table.
+	            - VizieR host is selectable in "Browsing" panel of
+	              the properties window, Strasbourg/NAOJ/Haravard
+	              (Default is NAOJ).
+
 2018.04.25 ver3.5.3 - Fixed a bug failed to re-popup Sync OPE dialog.
 	            - Updated GAIA database to DR2 (CDS).
 
