--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2018.05.23 ver3.5.6 - Change SMOKA access HTTP --> HTTPS .
+	            - Fixed a bug of date displays in elevation plots.
+	            - Revised moon calculation (data stock) in plots.
 
 2018.05.16 ver3.5.5 - Change URL for GSC search. Added "CAT=GSC23".
 	              Currently GSC-2.4.1 is default, but VOTable is still
