--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018.06.05 ver3.5.7 - Revised time calculation in the Plot function to the JD
+	              based one.
+
 2018.05.23 ver3.5.6 - Change SMOKA access HTTP --> HTTPS .
 	            - Fixed a bug of date displays in elevation plots.
 	            - Revised moon calculation (data stock) in plots.
