--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2018.06.07 ver3.6.1 - Revised lunar rise/set calculation.
+	              When moon is still above horizon, the rise/set times
+	              displaying at the bottom left corner are now those for
+  	              the current transit. When moon is under horizon, these
+	              will be for the next transit.
+	            - Added moon age display in Skymon panel. (max=29.5)
+
 2018.06.05 ver3.6.0 - Revised time calculation in the Plot function to the JD
 	              based one.
 
