--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hskymon (3.6.1ubuntu) trusty; urgency=medium
+
+  * Revised lunar rise/set and age calculation.
+
+ -- Akito Tajitsu <tajitsu@naoj.org>  Thu, 07 Jun 2018 13:39:56 -1000
+
 hskymon (3.6.0) trusty; urgency=medium
 
   * Revised time calculation in plot function to the JD based one.
