--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2018.07.XX ver3.6.2 - Added HSC masking area plot for bright srats
+2018.07.16 ver3.6.2 - Added HSC masking area plot for bright srats
 	              with FCDB GAIA search.
 	              (Recommend to use for GAIA G < ~12 mag)
+	              See Coupon et al. 2018, PASJ, 70, S7 for details.
 	            - Changed the default Vizier host from NAOJ to Harvard.
 
 2018.06.07 ver3.6.1 - Revised lunar rise/set calculation.
